SYS var comment

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		</footer>
 		<div class="hidden scripts">
 			<script type="text/javascript">
+				// system wide vars set by template engine
 				var SYS = {
 					DEBUG : 'True',
 					VERSION : '0.0',
