--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 		</header>
 
 		<div id="main" role="main">
-			Demo - Check console to difference between new Page(); and new Page.Page2();
+			<a>Home</a>
+			<a>About</a>
+			<a>Contact</a>
 		</div>
 
 		<footer>
