index.html update

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						RED.SITE.init(); // anonyomous SITE init // same as Example.init();
 						// Example.init(); // or, for clarity, named SITE init, these are the same thing
 					}
-				}, { // Google Analytics
+				}, { // Google Analytics // replace ID
 					load : ("https:" == document.location.protocol ? "https://ssl" : "http://www") + ".google-analytics.com/ga.js",
 					callback : function() {
 						var _gaq = _gaq || [];
