--- a/red/modules/ios-page-control/demo/demo.html
+++ b/red/modules/ios-page-control/demo/demo.html
@@ -84,6 +84,7 @@
 		
 		<script src="../../../base/class.js" type="text/javascript"></script>
 		<script src="../../../site.js" type="text/javascript"></script>
+		<script src="../../module.js" type="text/javascript"></script>
 		
 		<script src="../page-control.js" type="text/javascript"></script>
 		
