Renaming namespace from RED -> red

--- a/red/modules/ios-page-control/demo/demo.html
+++ b/red/modules/ios-page-control/demo/demo.html
@@ -93,7 +93,7 @@
 			$(document).ready(function () {
 				var container = $("#container");
 
-				var control = new RED.PageControl({
+				var control = new red.module.PageControl({
 					parent : container,
 					list : container.find("> ul"), // optional, assumes parent child as list
 					items : container.find("> ul > li") // optional, assumes list children as items
