--- a/deploy/index.html
+++ b/deploy/index.html
@@ -14,8 +14,19 @@
 		<meta name="description" content="" />
 		<meta name="author" content="Christian Harden" />
 
-		<!-- Mobile viewport optimized: j.mp/bplateviewport -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=1024" />
+
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="#f85d90" />
+
+		<link rel="shortcut icon" href="static/fimg/avicon.ico">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/img/touch-icon/ipad-72x72.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="static/img/touch-icon/ipad-144x144.png" />
+
+		
+		<script>(function(){var c,a;a=2===window.devicePixelRatio?"-retina":"";var b;b=function(a,b){return'<link rel="apple-touch-startup-image" href="X" media="screen and (orientation: O)"/>'.replace("X",a).replace("O",b)};/iPad/.test(window.navigator.userAgent)&&(c="static/img/startup/tablet-X.png".replace("X","portrait"+a),a="static/img/startup/tablet-X.png".replace("X","landscape"+a),document.write(b(c,"portrait")+b(a,"landscape")))})();</script>
+		
+
 
 		<meta property="ga:property_id" content="UA-30937664-1"/>
 		<meta property="ga:domain" content="none"/>
@@ -29,8 +40,6 @@
 		<meta property="og:url" content="" />
 		<meta property="og:locale" content="en_us" />
 		<meta property="og:type" content="blog" />
-
-		<!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
 		<link rel="stylesheet" href="static/css/style.css" />
 		<script src="static/js/libs/modernizr-2.5.3.min.js"></script>
@@ -114,7 +123,7 @@
 							<small>women think that the first kiss will tell them everything they need to know about a relationship</small>
 						</figcaption>
 					</figure>
-					<p>Nikki and Christian spent their first date playing scrabble and dancing to oldies at Mel's Diner where they had their first kiss while dancing to The Beatles (no one else was dancing... or kissing for that matter).  They officially started dating September 27th, 2009 and their "secret" romance was unearthed at work as witnesses reportedly "saw Harden making out with Shum in the parking lot."</p>
+					<p>Nikki and Christian spent their first date playing Scrabble and dancing to oldies at Mel's Diner, where they had their first kiss while dancing to The Beatles (no one else was dancing... or kissing for that matter).  They officially started dating September 27th, 2009 and their "secret" romance was unearthed at work as witnesses reportedly "saw Harden making out with Shum in the parking lot."</p>
 				</article>
 
 				<article class="stat engagement">
@@ -127,7 +136,7 @@
 							<small>57,000 couples married on 11/11/11 and at least one couple got engaged...</small>
 						</figcaption>
 					</figure>
-					<p>Nikki and Christian both have alarms on their phones set to 11:11AM/PM; and almost every day they remind each other to "Make a Wish!". According to superstition you can't tell anyone what you wish for, but on 11-11-11 it was pretty obvious what Christian had been wishing for these last two years: he proposed to Nikki on their Friday morning run by the LA River with "The World's Longest Love Letter - 1/4 Mile" written in chalk on the sidewalk.  Nikki said "Yes!" and then demanded to run to the beginning of the love-letter to replay the proposal from the top.</p>
+					<p>Nikki and Christian both have alarms on their phones set to 11:11AM/PM, and almost every day they remind each other to "Make a Wish!" According to superstition, you can't tell anyone what you wish for, but on 11-11-11 it was pretty obvious what Christian had been wishing for the last couple of years.  He proposed to Nikki on their Friday morning run by the LA River with "The World's Longest Love Letter" written in chalk on the sidewalk.  Nikki said "Yes!" and then demanded to run to the beginning of the love letter to replay the proposal from the top.</p>
 				</article>
 
 				
@@ -192,14 +201,14 @@
 						<img class="heart" src="static/img/wedding/marker.png" alt="Map marker" />
 					</div>
 					<figcaption>
-						<strong>Calamigos Ranch, Malibu CA.</strong>
+						<strong>Calamigos Ranch, Malibu CA</strong>
 						<small>4:30 PM <br/>August 10th, 2012</small>
 					</figcaption>
 				</figure>
 				<p>Secluded just outside of the Los Angeles area, nestled among the Santa Monica Mountains, Calamigos Ranch is one of Malibu’s best kept secrets! Rich with California heritage, Calamigos Ranch boasts picturesque views with over 130 acres of beautifully landscaped grounds. Soothing waterfalls, rolling green meadows, and views from the City to the Sea, Calamigos Ranch is the most visually stunning special event location in the Malibu Wine Country.</p>
 
-				<a class="directions" title="Get Directions" href="">get directions</a>
-				<a class="website" title="Calamigos Ranch Website" href="">website</a>
+				<a class="directions" title="Get Directions" href="https://maps.google.com/maps/ms?hl=en&ie=UTF8&msa=0&msid=216379673372689199621.00045d0629c9d63ca2fc8&s=AARTsJpRiBs_O-AGXLElLGltpU4V0ATJ1g&t=m&vpsrc=0&f=d&daddr=Calamigos+Ranch+%4034.095636,-118.816366&ll=34.154432,-118.816452&spn=0.272744,0.439453&iwloc=00045d062c846f638ab50&source=embed" target="_blank">get directions</a>
+				<a class="website" href="http://www.calamigos.com/services/wedding/the-garden-patio" target="_blank" title="Calamigos Ranch Website" href="">website</a>
 			</article> 
 
 
@@ -253,7 +262,7 @@
 				<article class="natasha player left">
 					<b>1</b>
 					<div class="photo">
-						<img src="static/img/party/natasha.jpg" alt="" />
+						<div><img src="static/img/party/natasha.jpg" alt="" /></div>
 					</div>
 					<h1>Natasha Shum, <br/>Matron of Honor</h1>
 					<p>Natasha is Nikki's eldest sister and the person who introduced Nikki to RED (and therefore to Christian). Nikki also owes surviving her first year of semi-financial independence, her fashion sense, and her countless photos hob-knobbing with celebs to Natasha. Nikki has often been called Tasha's "mini me," a nickname she's proud to have.</p>
@@ -262,16 +271,16 @@
 				<article class="natalie player">
 					<b>2</b>
 					<div class="photo">
-						<img src="static/img/party/natalie.jpg" alt="" />
+						<div><img src="static/img/party/natalie.jpg" alt="" /></div>
 					</div>
 					<h1>Natalie Shum, <br/>Matron of Honor</h1>
-					<p>Natalie is Nikki's second eldest sister and her role model of a successful woman. When she's not with her adorable two daughters and wonderful husband, Natalie is saving lives as an ER doctor. Nikki hopes one day she casing/paint/cook/dance a fraction as well as Natalie does.</p>
+					<p>Natalie is Nikki's second eldest sister and her role model of a successful woman. When she's not with her adorable two daughters and wonderful husband, Natalie is saving lives as an ER doctor. Nikki hopes one day she can sing/paint/cook/dance a fraction as well as Natalie does.</p>
 				</article>
 
 				<article class="becky player left">
 					<b>3</b>
 					<div class="photo">
-						<img src="static/img/party/becky.jpg" alt="" />
+						<div><img src="static/img/party/becky.jpg" alt="" /></div>
 					</div>
 					<h1>Rebecca Modglin, <br/>Bridesmaid</h1>
 					<p>Becky has been Nikki's best friend since they were 12 years old and the sole members of GAG (Girls Against Golf). When they're together, they eat ice cream and chocolate and talk for hours on end. Nikki "lavas" Becky and she always will.</p>
@@ -280,7 +289,7 @@
 				<article class="jenny player">
 					<b>4</b>
 					<div class="photo">
-						<img src="static/img/party/jenny.jpg" alt="" />
+						<div><img src="static/img/party/jenny.jpg" alt="" /></div>
 					</div>
 					<h1>Jennifer Greenwald, <br/>Bridesmaid</h1>
 					<p>Jenny spends 40+ hours/week in the office next to Nikki and was among the first to catch Christian and Nikki "in the act." She has seen the couple's relationship grow from co-workers to co-habitants and knows their journey well. Three years ago, Nikki didn't think she'd have a fourth bridesmaid, but Jenny had her at hello (with some persuasion).</p>
@@ -292,23 +301,23 @@
 
 				<article class="helena player">
 					<div class="photo">
-						<img src="static/img/party/helena.jpg" alt="" />
+						<div><img src="static/img/party/helena.jpg" alt="" /></div>
 					</div>
 					<h1>Helena <br/>Shum Koubek <br/><span>(age 5)</span></h1>
 				</article>
 
 				<article class="olivia player">
 					<div class="photo">
-						<img src="static/img/party/olivia.jpg" alt="" />
+						<div><img src="static/img/party/olivia.jpg" alt="" /></div>
 					</div>
 					<h1>Olivia <br/>Shum Koubek <br/><span>(age 3)</span></h1>
 				</article>
 
 				<article class="noelle player">
 					<div class="photo">
-						<img src="static/img/party/noelle.jpg" alt="" />
+						<div><img src="static/img/party/noelle.jpg" alt="" /></div>
 					</div>
-					<h1>Noelle <br/>Shum Koubek <br/><span>(8 months)</span></h1>
+					<h1>Noelle <br/>Shum Walton <br/><span>(8 months)</span></h1>
 				</article>
 			</div>
 
@@ -318,25 +327,25 @@
 				<article class="cj player">
 					<b>1</b>
 					<div class="photo">
-						<img src="static/img/party/cj.jpg" alt="" />
+						<div><img src="static/img/party/cj.jpg" alt="" /></div>
 					</div>
 					<h1>CJ Price,<br/>Best Man</h1>
-					<p>CJ and Christian became close friends in 2000 when CJ took the then Virginia Tech freshman under his wing, becoming Christian's greatest mentor and shaper-of-evil for the next decade!  CJ and Christian moved to Las Vegas together in 2005 where they continued to hone their skills in debauchery until CJ was saved from a life of pool-solo-cup-war and Frisbee-golf by his amazing wife Sheva.  They should send CJ to Iran because he can seriously "win the hearts and minds" of anyone you put him in the room with.</p>
+					<p>CJ and Christian became close friends in 2000 when CJ took the then Virginia Tech freshman under his wing, becoming Christian's greatest mentor and shaper-of-evil for the next decade!  CJ and Christian moved to Las Vegas together in 2005 where they continued to hone their skills in debauchery until CJ was saved from a life of pool-solo-cup-war and Frisbee-golf by his amazing wife Shiva.</p>
 				</article>
 
 				<article class="matt player">
 					<b>2</b>
 					<div class="photo">
-						<img src="static/img/party/matt.jpg" alt="" />
+						<div><img src="static/img/party/matt.jpg" alt="" /></div>
 					</div>
 					<h1>Matthew Schumann,<br/>Groomsman</h1>
-					<p>Matthew and Christian have been best friends since they were about 10 years old.  Matt was known for having the best "put-downs" on the playground - and Chrsitian was always there to laugh and point at whoever was currently feeling the wrath of Matt's sharp and unremitting tongue. </p> 
+					<p>Matthew and Christian have been best friends since they were about 10 years old.  Matt was known for having the best "put-downs" on the playground - and Chrsitian was always there to laugh and point at whoever was currently feeling the wrath of Matt's sharp and unremitting tongue.</p> 
 				</article>
 
 				<article class="brian player right">
 					<b>3</b>
 					<div class="photo">
-						<img src="static/img/party/brian.jpg" alt="" />
+						<div><img src="static/img/party/brian.jpg" alt="" /></div>
 					</div>
 					<h1>Brian Mackey,<br/>Groomsman</h1>
 					<p>Brian and Christian met Freshman year at Virginia Tech where they became fast friends, eventual roommates, imprompu study-hall song and dance partners, firework fiends, and perpetual plotters and jokesters.  Christian has super-deep permanent laugh-wrinkles on his face because Brian's antics kept Christian laughing hysterically for years.</p> 
@@ -345,19 +354,19 @@
 				<article class="chad player">
 					<b>4</b>
 					<div class="photo">
-						<img src="static/img/party/chad.jpg" alt="" />
+						<div><img src="static/img/party/chad.jpg" alt="" /></div>
 					</div>
 					<h1>Chad White,<br/>Groomsman</h1>
-					<p>Chad and Christian spent pretty much every waking minute together in college.  Chad is a soft-spoken brilliant thinker that challenged Christian's perspective on life, the universe, and everything.  Chad continues to shape, cultivate, and awaken Christian's spiritual and metaphyscial place in the world.</p> 
+					<p>Chad and Christian spent pretty much every waking minute together in college.  Chad is a soft-spoken brilliant thinker who challenged Christian's perspective on life, the universe, and everything.  Chad continues to shape, cultivate, and awaken Christian's spiritual and metaphyscial place in the world.</p> 
 				</article>
 
 				<article class="josh player">
 					<b>5</b>
 					<div class="photo">
-						<img src="static/img/party/josh.jpg" alt="" />
+						<div><img src="static/img/party/josh.jpg" alt="" /></div>
 					</div>
 					<h1>Joshua Jetson,<br/>Groomsman</h1>
-					<p>Josh and Christian met at RED and bonded while exploring recipes for disaster and awkwardness usually involving such ingredients as trashster unicorn emo-bangs and/or over-fermented homemade beer.  Josh is extremely thoughtful and very patient... he NEVER gets angry.</p> 
+					<p>Josh and Christian met at RED and bonded while exploring recipes for disaster and awkwardness, usually involving such ingredients as trashster unicorn emo-bangs and/or over-fermented homemade beer.  Josh is extremely thoughtful and very patient... he NEVER gets angry.</p> 
 				</article>
 			</div>
 
@@ -365,14 +374,14 @@
 				<h3 class="headline">Parents</h3>
 				<article class="shum player">
 					<div class="photo">
-						<img src="static/img/party/shum.jpg" alt="" />
+						<div><img src="static/img/party/shum.jpg" alt="" /></div>
 					</div>
 					<h1>Martin & Helen Shum, <br/>Parents of the Bride</h1>
 				</article>
 
 				<article class="harden player">
 					<div class="photo">
-						<img src="static/img/party/harden.jpg" alt="" />
+						<div><img src="static/img/party/harden.jpg" alt="" /></div>
 					</div>
 					<h1>Mark & Suzanne Harden, <br/>Parents of the Groom</h1>
 				</article>
@@ -383,21 +392,21 @@
 
 				<article class="greg player">
 					<div class="photo">
-						<img src="static/img/party/greg.jpg" alt="" />
+						<div><img src="static/img/party/greg.jpg" alt="" /></div>
 					</div>
 					<h1>Greg Koubek,<br/>Brother-in-Law<br/><span>Officiant</span></h1>
 				</article>
 
 				<article class="nate player">
 					<div class="photo">
-						<img src="static/img/party/nate.jpg" alt="" />
+						<div><img src="static/img/party/nate.jpg" alt="" /></div>
 					</div>
 					<h1>Nathan Walton,<br/>Brother-in-Law<br/><span>Music</span></h1>
 				</article>
 
 				<article class="steve player">
 					<div class="photo">
-						<img src="static/img/party/steve.jpg" alt="" />
+						<div><img src="static/img/party/steve.jpg" alt="" /></div>
 					</div>
 					<h1>Steve Pepdjonovic<br/><span>Usher</span></h1>
 				</article>
@@ -523,12 +532,12 @@
 									</div>
 								</label>
 								<div class="error">
-									<p>You shaaallll not pass!</p>
+									<p>There should be a code on your wedding invitation!</p>
 								</div>
 								<input name="code" type="text" placeholder="Enter Code" />
 							</li>
 							<li>
-								<sup>?</sup>
+								<!-- <sup>?</sup> -->
 								<label class="">
 									<div>
 										<div class="line two"></div>
@@ -537,12 +546,12 @@
 									</div>
 								</label>
 								<div class="error">
-									<p>Uh... Who are you Voldemort?</p>
+									<p>Yo. for reals, what's ur name?</p>
 								</div>
 								<input name="name" type="text" placeholder="What's Your Name?" />
 							</li>
 							<li>
-								<sup>?</sup>
+								<!-- <sup>?</sup> -->
 								<label class="">
 									<div>
 										<div class="line one"></div>
@@ -565,6 +574,15 @@
 									<div class="radio"></div>
 								</div>
 							</li>
+							<!-- 
+							<li class="radios">
+								<label></label>
+								<div>
+									<input type="checkbox" name="rehearsal"/>
+									<span>CHeck here if you <strong>ARE</strong> coming to the rehearsal dinner</span>
+									<div class="checkbox"></div>
+								</div>
+							</li> -->
 							<li>
 								<label>Leave us a message!</label>
 								<div class="error">
