--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en" itemscope itemtype="http://schema.org/Event"><![endif]-->
-<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" lang="en" itemscope itemtype="http://schema.org/Event"><![endif]-->
-<!--[if IE 8]><html class="no-js lt-ie9" lang="en" itemscope itemtype="http://schema.org/Event"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en" itemscope itemtype="http://schema.org/Event"><!--<![endif]-->
-	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# shwedding: http://ogp.me/ns/fb/shwedding#">
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en" itemscope itemtype="https://schema.org/Event"><![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" lang="en" itemscope itemtype="https://schema.org/Event"><![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9" lang="en" itemscope itemtype="https://schema.org/Event"><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang="en" itemscope itemtype="https://schema.org/Event"><!--<![endif]-->
+	<head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb# shwedding: https://ogp.me/ns/fb/shwedding#">
 		<meta charset="utf-8" />
   		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<link rel="dns-prefetch" href="static/" />
 		<link rel="media-url" href="static/" />
-		<link rel="site-url" href="http://shum-harden.com" />
+		<link rel="site-url" href="https://shum-harden.com" />
 
 		<title>Nikki and Christian Shum-Harden : Wedding of Nikki Shum and Christian Harden</title>
 		<meta name="description" content="Nikki Shum and Christian Harden are getting married in Malibu California." />
@@ -54,14 +54,18 @@
 		<meta property="og:locale" content="en_us" />
 
 		<meta property="og:title" content="Shum-Harden Wedding Website" />
-		<meta property="og:image"  content="http://shum-harden.com/static/img/facebook/fb-share.png" />
-		<meta property="og:url" content="http://shum-harden.com" />
+		<meta property="og:image"  content="https://shum-harden.com/static/img/facebook/fb-share.png" />
+		<meta property="og:url" content="https://shum-harden.com" />
 		<meta property="og:type" content="website" />
 
 
 		<!-- Google + -->
 		<meta itemprop="name" content="Shum-Harden Wedding">
 		<meta itemprop="description" content="Nikki Shum and Christian Harden are getting married">
+		<meta itemprop="startDate" content="August 10th 2012">
+		<meta itemprop="startDate" content="August 12th 2012">
+		<meta itemprop="location" content="Malibu CA">
+		<meta itemprop="image" content="/static/img/facebook/fb-share.png">
 
 		<link rel="stylesheet" href="static/css/style.css" />
 		<script src="static/js/libs/modernizr-2.5.3.min.js"></script>
@@ -109,7 +113,7 @@
 
 				<div class="stuff fb">
 					<a class="fb-connect" title="Connect With Facebook"><img src="static/img/facebook/fb-connect.png" alt="Facebook Connect"/></a>
-					<div class="fb-like" data-send="false" data-action="like" data-layout="button_count" data-href="http://shum-harden.com" data-width="85" data-show-faces="false" data-font="arial"></div>
+					<div class="fb-like" data-send="false" data-action="like" data-layout="button_count" data-href="https://shum-harden.com" data-width="85" data-show-faces="false" data-font="arial"></div>
 					<span class="request">We have a lot more stuff to add to this site so connect with Facebook for some fun features and updates.</span>
 					<span class="connected">Thanks for connecting! We'll let you know as soon as there's more stuff to do on the site!</span>
 				</div>
@@ -239,7 +243,7 @@
 				<p>Secluded just outside of the Los Angeles area, nestled among the Santa Monica Mountains, Calamigos Ranch is one of Malibu’s best kept secrets! Rich with California heritage, Calamigos Ranch boasts picturesque views with over 130 acres of beautifully landscaped grounds. Soothing waterfalls, rolling green meadows, and views from the City to the Sea, Calamigos Ranch is the most visually stunning special event location in the Malibu Wine Country.</p>
 
 				<a class="directions" title="Get Directions" href="https://maps.google.com/maps/ms?hl=en&ie=UTF8&msa=0&msid=216379673372689199621.00045d0629c9d63ca2fc8&s=AARTsJpRiBs_O-AGXLElLGltpU4V0ATJ1g&t=m&vpsrc=0&f=d&daddr=Calamigos+Ranch+%4034.095636,-118.816366&ll=34.154432,-118.816452&spn=0.272744,0.439453&iwloc=00045d062c846f638ab50&source=embed" target="_blank">get directions</a>
-				<a class="website" href="http://www.calamigos.com/services/wedding/the-garden-patio" target="_blank" title="Calamigos Ranch Website" href="">website</a>
+				<a class="website" href="https://www.calamigos.com/services/wedding/the-garden-patio" target="_blank" title="Calamigos Ranch Website" href="">website</a>
 			</article> 
 
 
@@ -523,7 +527,7 @@
 					<span>Complimentary shuttle to wedding venue</span>
 					<span class="address">28901 Canwood St. Agoura Hills, CA 91301</span>
 					<span class="phone">(818) 865-1000</span>
-					<a href="http://homewoodsuites.hilton.com/en/hw/groups/personalized/A/AGOHWHW-WHS-20120807/index.jhtml?WT.mc_id=POG" target="_blank" title="Homewood Suites Book Now">Book Now</a>
+					<a href="https://homewoodsuites.hilton.com/en/hw/groups/personalized/A/AGOHWHW-WHS-20120807/index.jhtml?WT.mc_id=POG" target="_blank" title="Homewood Suites Book Now">Book Now</a>
 					<a href="https://maps.google.com/maps?q=28901+Canwood+St.+Agoura+Hills,+CA+91301&ie=UTF-8&hq=&hnear=0x80e826ad779f060f:0xb7acc6c0fd1b8673,28901+Canwood+St,+Agoura+Hills,+CA+91301&gl=us&daddr=28901+Canwood+St,+Agoura+Hills,+CA+91301&ei=T-7IT_39KYnzggfT7qXeDg&oi=geocode_result&ved=0CAwQwwUwAA" target="_blank" title="Get Directions">Directions</a>
 				</p>
 			</article>
@@ -532,19 +536,19 @@
 
 			<ul class="registries">
 				<li>
-					<a href="http://www.surlatable.com/registry/giftRegistryList.jsp?id=200110835233" target="_blank" title="Sir Le Table">
+					<a href="https://www.surlatable.com/registry/giftRegistryList.jsp?id=200110835233" target="_blank" title="Sir Le Table">
 						<span>Visit</span>
 						<img src="static/img/guests/sirletable.jpg" alt="Sir Le Table"/>
 					</a>
 				</li>
 				<li>
-					<a href="http://www.potterybarn.com/registry/2949004/registry-list.html" target="_blank" title="Pottery Barn">
+					<a href="https://www.potterybarn.com/registry/2949004/registry-list.html" target="_blank" title="Pottery Barn">
 						<span>Visit</span>
 						<img src="static/img/guests/potterybarn.jpg" alt="Pottery Barn"/>
 					</a>
 				</li>
 				<li>
-					<a href="http://www1.bloomingdales.com/registry/wedding/guest/?registryId=708457" target="_blank" title="BLoomgindale's">
+					<a href="https://www1.bloomingdales.com/registry/wedding/guest/?registryId=708457" target="_blank" title="BLoomgindale's">
 						<span>Visit</span>
 						<img src="static/img/guests/bloomingdales.jpg" alt="Bloomingdale's"/>
 					</a>
@@ -686,8 +690,8 @@
 						<ul>
 							<li>© 2024 Potench, LLC. All rights reserved.</li>
 							<li>shum-harden wedding</li>
-							<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://shum-harden.com" data-count="horizontal" data-text="I'm rockin'-out at the Shum-Harden #shwedding website!">Tweet</a></li>
-							<li class="fb"><div class="fb-like" data-send="false" data-action="like" data-layout="button_count" data-href="http://shum-harden.com" data-width="85" data-show-faces="false" data-font="arial"></div></li>
+							<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://shum-harden.com" data-count="horizontal" data-text="I'm rockin'-out at the Shum-Harden #shwedding website!">Tweet</a></li>
+							<li class="fb"><div class="fb-like" data-send="false" data-action="like" data-layout="button_count" data-href="https://shum-harden.com" data-width="85" data-show-faces="false" data-font="arial"></div></li>
 							<li class="plusone"><g:plusone size="small"></g:plusone></li>
 						</ul>
 					</nav>
