inde xchanges for google search

--- a/404.html
+++ b/404.html
@@ -1,128 +1,9 @@
 <!doctype html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en" itemscope itemtype="http://schema.org/Event"><![endif]-->
-<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" lang="en" itemscope itemtype="http://schema.org/Event"><![endif]-->
-<!--[if IE 8]><html class="no-js lt-ie9" lang="en" itemscope itemtype="http://schema.org/Event"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en" itemscope itemtype="http://schema.org/Event"><!--<![endif]-->
-	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# shwedding: http://ogp.me/ns/fb/shwedding#">
-		<meta charset="utf-8" />
-  		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<link rel="dns-prefetch" href="/static/" />
-		<link rel="media-url" href="/static/" />
-
-		<title>Shum-Harden : Wedding of Nikki Shum and Christian Harden</title>
-
-		<meta name="description" content="Nikki Shum and Christian Harden are getting married August 10th 2012 in Malibu California." />
-		<meta name="author" content="Christian Harden" />
-		<meta name="keywords" content="Nikki Shum, Chrisian Harden, Nikki Shum-Harden, Christian Shum-Harden, Wedding" />
-
-		<meta name="viewport" content="width=1024, maximum-scale=1"  />
-
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="#f85d90" />
-
+<html lang="en">
+	<head>
 		<link rel="shortcut icon" href="/static/img/favicon.ico">
-
-		<link rel="apple-touch-icon" href="/static/img/touch-icon/apple-touch-icon.png">
-		<link rel="apple-touch-icon" sizes="57x57" href="/static/img/touch-icon/ipad-57x57.png" />
-		<link rel="apple-touch-icon" sizes="72x72" href="/static/img/touch-icon/ipad-72x72.png" />
-		<link rel="apple-touch-icon" sizes="114x114" href="/static/img/touch-icon/ipad-114x114.png" />
-		<link rel="apple-touch-icon" sizes="144x144" href="/static/img/touch-icon/ipad-144x144.png" />
-
-		<!-- <link rel="apple-touch-startup-image" href="img/startup/tablet-landscape.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 1)" />
-		<link rel="apple-touch-startup-image" href="img/startup/tablet-landscape-retina.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 2)" /> -->
-
-		<!-- startup image for web apps - iPad - landscape (748x1024) 
-		     Note: iPad landscape startup image has to be exactly 748x1024 pixels (portrait, with contents rotated).-->
-		<link rel="apple-touch-startup-image" href="/static/img/startup/tablet-landscape.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)" />
-
-		<!-- startup image for web apps - iPad - portrait (768x1004) -->
-		<link rel="apple-touch-startup-image" href="/static/img/startup/tablet-portrait.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)" />
-
-		<!-- startup image for web apps (320x460) -->
-		<link rel="apple-touch-startup-image" href="/static/img/startup/iphone.png" media="screen and (max-device-width: 320px)" />
-
-
-
-		<meta property="ga:property_id" content="UA-30937664-1"/>
-		<meta property="ga:domain" content="none"/>
-
-		<!-- Facebook sharing -->
-		<meta property="og:app_id" content="123096721155602" />
-		<meta property="og:title" content="Shum-Harden Wedding Website" />
-		<meta property="og:image" content="static/img/facebook/facebook-share.png" />
-		<meta property="og:site_name" content="Shum-Harden Wedding Website" />
-		<meta property="og:description" content="Nikki Shum and Christian Harden are getting married August 10th 2012 in Malibu California." />
-		<meta property="og:url" content="http://shum-harden.com" />
-		<meta property="og:locale" content="en_us" />
-		<meta property="og:type" content="website" />
-		
-
-		<!-- Add the following three tags inside head -->
-		<meta itemprop="name" content="Shum-Harden Wedding">
-		<meta itemprop="description" content="Nikki Shum and Christian Harden are getting married! 4:30 PM, Friday, August 10th 2012 at Calamigos Ranch, Malibu CA">
-
-		<link rel="stylesheet" href="/static/css/style.css" />
-		<script src="/static/js/libs/modernizr-2.5.3.min.js"></script>
 	</head>
-	<body class="page" data-page-class="Page">
-		<div id="container">
-			<header>
-				<nav role="navigation">
-					<ul>
-						<li class="selected"><a href="#welcome" data-section="welcome" title="Welcome">Welcome</a></li>
-						<li class=""><a href="#story" data-section="story" title="A Love Story">A Love Story</a></li>
-						<li><a href="#wedding" data-section="wedding" title="The Wedding">The Wedding</a></li>
-						<li><a href="#party" data-section="party" title="Wedding Party">Wedding Party</a></li>
-						<li><a href="#guests" data-section="guests" title="Guest Services">Guest Services</a></li>
-						<li class="rsvp"><a href="#rsvp" title="RSVP" data-section="rsvp">RSVP <small>Now</small></a></li>
-					</ul>
-				</nav>
-			</header>
-			<div id="main" role="main">
-				404 - Page Not Found
-			</div>
-
-			
-
-			<footer>
-				<div class="background">
-					<div class="backing tilt-right"><div></div></div>
-				</div>
-				<div class="content">
-					<nav>
-						<ul>
-							<li>© 2024 Potench, LLC. All rights reserved.</li>
-							<li>shum-harden wedding</li>
-							<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://shum-harden.com" data-count="horizontal" data-text="I'm rockin'-out at the Shum-Harden #shwedding website!">Tweet</a></li>
-							<li class="fb"><div class="fb-like" data-send="false" data-action="like" data-layout="button_count" data-width="85" data-show-faces="false" data-font="arial"></div></li>
-							<li class="plusone"><g:plusone size="small"></g:plusone></li>
-						</ul>
-					</nav>
-				</div>
-			</footer>
-		</div> <!--! end of #container -->
-
-		<!-- JavaScript at the bottom for fast page loading -->
-		<div class="hidden scripts">
-			<script type="text/javascript">
-				(function () {
-					Modernizr.load([{
-						// jQuery
-						load : "/static/js/libs/jquery-1.7.2.min.js"
-					}, { // SITE
-						load : [
-							
-							// All Minified
-								"/static/js/wedding.min.js", 
-							
-						],
-						wait : true,
-						complete : function () {
-							wedding.init();
-						}
-					}]);
-				}());
-			</script>
-		</div>
+	<body>
+		<h1>404  - Page Not Found</h1>
 	</body>
 </html>
